--- a/90 DWT 1/90 DWT 1-Info.plist
+++ b/90 DWT 1/90 DWT 1-Info.plist
@@ -26,6 +26,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1.8.42.1</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -33,8 +35,12 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSCalendarsUsageDescription</key>
+	<string>Advertising</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Monthly Progress Photos</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Advertising</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Monthly Progress Photos</string>
 	<key>UILaunchStoryboardName</key>
